--- a/sigmaCabs/app/views/dispatches/currentMonthData.html
+++ b/sigmaCabs/app/views/dispatches/currentMonthData.html
@@ -25,8 +25,8 @@
         <span title="Cancelled Booking"><strong>CB:&nbsp;</strong></span>
         <span class="margin-right10"><strong>{{currentDayStatistics.canceledBookings}}</strong></span>
     </div>
-    <div style="height:180px;margin-right: 20px;width:72%;" id="customerBookingGridID" class="bookingHistoryGrid left">
-    	<div class="gridStyle" ng-grid="gridCurrentMonthData" style="min-height:160px;"></div>
+    <div style="height:225px;margin-right: 20px;width:72%;" id="customerBookingGridID" class="bookingHistoryGrid left">
+    	<div class="gridStyle" ng-grid="gridCurrentMonthData" style="min-height:220px;"></div>
     </div>
     <div style="width:24%;margin-top: 20px;" class="left">
     	<div class="fieldContainer relative clearBoth">
@@ -52,5 +52,105 @@
     </div>
     <p class="clear" />
 </fieldset>
-<div class="left" data-ng-include="vehiclePerformance" style="width:49.5%;"></div>
+<fieldset class="left" style="width:46.3%">
+    <legend class="searchbox-border">Current Month History</legend>
+    
+    <div style="width: 100%;">
+        <div class="left" style="width:69%;padding: 0 5px 0 0;border-right: 1px solid #ccc;margin-bottom: 5px;">
+            <div style="width:100%;border-bottom: 1px solid #ccc;padding-bottom: 5px;">
+                <h4 style="margin: 5px;font-size: 12px;font-weight: bold;">Vehicle and Driver Details</h4>
+                <div class="fieldContainer relative left" style="width:180px;">
+                    <label class="labelCompact" title="Day Average">Day Avg.</label>
+                    <span>1500</span>
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Till now Reached">Reached</label>
+                    <span class="left margin-right10">1400</span>
+                    <span class="left" style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:green;"></span>
+                    <p class="clear"/>
+                </div>
+                <p class="clear"/>
+                <div class="fieldContainer relative left" style="width:180px;">
+                    <label class="labelCompact" title="Vehicle Performance">Perf..</label>
+                    <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:orange;"></span>
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Vehicle Complaints Count">V.Comp.</label>
+                    <span>1</span>
+                </div>
+                <p class="clear"/>
+                <div class="fieldContainer relative left" style="width:180px;">
+                    <label class="labelCompact" title="Total Days">T.Days</label>
+                    <span>20</span>
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Working Days">W.Days</label>
+                    <span>18</span>
+                </div>
+                <p class="clear"/>
+                <div class="fieldContainer relative left" style="width:180px;">
+                    <label class="labelCompact" title="Average Login Hours">Avg.Login</label>
+                    <span>32</span>
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Driver Complaints Count">D.Comp.</label>
+                    <span>1</span>
+                </div>
+                <p class="clear"/>
+                <div class="fieldContainer relative left" style="width:180px">
+                    <label class="labelCompact" title="Vehicle Rating">V.Rating</label>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <!-- <span ng-repeat="j in vehicleDetailsData.vehicle.aRating">
+                        <span class="glyphicon {{j.cls}}"></span>
+                    </span> -->
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Driver Rating">D.Rating</label>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <!-- <span ng-repeat="j in vehicleDetailsData.vehicle.aRating">
+                        <span class="glyphicon {{j.cls}}"></span>
+                    </span> -->
+                </div>
+                <p class="clear"/>
+            </div>
+            <div style="width:100%;">
+                <h4 style="margin: 5px;font-size: 12px;font-weight: bold;">Booking Details</h4>
+                <div class="fieldContainer relative" style="width:180px;">
+                    <label class="labelCompact" title="Total Bookings">T.Bkngs</label>
+                    <span>150</span>
+                </div>
+                <div class="fieldContainer relative left" style="width:180px;">
+                    <label class="labelCompact" title="Successful Bookings">SB</label>
+                    <span>145</span>
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Rejected Bookings">R.B</label>
+                    <span>2</span>
+                </div>
+                <p class="clear"/>
+                <div class="fieldContainer relative left" style="width:180px;">
+                    <label class="labelCompact" title="Roadside Bookings">Ro.B</label>
+                    <span>2</span>
+                </div>
+                <div class="fieldContainer relative right" style="width:180px">
+                    <label class="labelCompact" title="Cancelled Bookings">Ca.B</label>
+                    <span>1</span>
+                </div>
+                <p class="clear"/>
+            </div>
+        </div>
+        <div class="left" style="height: 100%;width:30%; text-align: center;">
+            <!-- <chart  value='{{assetStateChartData}}' type="pie" id="stateChart" height="200" width="200"></chart> --> Chart Data
+        </div>
+        <p class="clear"/>
+    </div>
+</fieldset>
 <p class="clear" />
