--- a/sigmaCabs/app/views/dispatches/vehiclePerformance.html
+++ b/sigmaCabs/app/views/dispatches/vehiclePerformance.html
@@ -1,56 +1,64 @@
-<fieldset class="" style="height:220px;">
+<fieldset class="vehicleHistory">
 	<legend class="searchbox-border">Vehicle Information</legend>
-	<div class="fieldContainer relative left" style="width:180px;">
-        <label class="labelCompact" title="Projected Login Hours">PLH</label>
+	<div class="fieldContainer relative left">
+        <label class="labelCompact" title="Projected Login Hours">P.Login Hours</label>
         <span>14</span>
     </div>
-    <div class="fieldContainer relative right" style="width:180px">
-        <label class="labelCompact" title="Driver Name">D.Name</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" title="Driver Name">Driver Name</label>
         <span>Test</span>
     </div>
     <p class="clear"/>
-    <div class="fieldContainer relative left" style="width:180px;">
-        <label class="labelCompact" title="Opted Package">OP</label>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact" title="Opted Package">Opted Package</label>
         <span>40,000</span>
     </div>
-    <div class="fieldContainer relative right" style="width:180px">
-        <label class="labelCompact" title="Owner Name">O.Name</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" title="Owner Name">Owner Name</label>
         <span>Test 1</span>
     </div>
     <p class="clear"/>
-    <div class="fieldContainer relative left" style="width:180px;">
-        <label class="labelCompact" title="Attachment Type">AT</label>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact" title="Attachment Type">Attachment Type</label>
         <span title="Promoting Partner" class="ellipsisText">Promoting Partner</span>
     </div>
-    <div class="fieldContainer relative right" style="width:180px">
-        <label class="labelCompact" title="Registration Number">R.No</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" title="Registration Number">Reg. No</label>
         <span class="ellipsisText" title="AP 09 9999">AP 09 9999</span>
     </div>
     <p class="clear"/>
-    <div class="fieldContainer relative left" style="width:180px;">
-        <label class="labelCompact" title="Driver Type">dT</label>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact" title="Driver Type">Driver Type</label>
         <span title="Driver cum Owner" class="ellipsisText">DCO</span>
     </div>
-    <div class="fieldContainer relative right" style="width:180px">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Model</label>
         <span>08 - 2013</span>
     </div>
     <p class="clear"/>
-    <div class="fieldContainer relative left" style="width:180px;">
-        <label class="labelCompact" title="Home Location">HL</label>
-        <span>Mehdipatnam</span>
+    <div class="fieldContainer relative left">
+        
     </div>
-    <div class="fieldContainer relative right" style="width:180px">
-        <label class="labelCompact" title="Paper Validity">P.Val</label>
-        <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:#ff0000;"></span>
-    </div>
-    <p class="clear"/>
-    <div class="fieldContainer relative left" style="width:180px;">
-        <label class="labelCompact" title="Expected Login Time">ELT</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" title="Expected Login Time">Exp. Login Time</label>
         <span>10:00 to 19:00</span>
     </div>
-    <div class="fieldContainer relative right" style="width:180px">
-        <label class="labelCompact" title="Facilities">Fac..</label>
+    <p class="clear"/>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact" title="Paper Validity">Paper Val.</label>
+        <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:#ff0000;"></span>
+    </div>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" title="Home Location">Home Location</label>
+        <span>Mehdipatnam</span>
+    </div>
+    <p class="clear"/>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact" title="Expired Documents">Expired Documents</label>
+        <span>License</span>
+    </div>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" title="Facilities">Facilities</label>
         <span>Music System</span>
     </div>
     <p class="clear"/>
