--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -35,7 +35,7 @@
 
         <div class="fieldContainer left marginRightLeft5 bookingInput">
             <label class="labelCompact" title="Vehicle Type &amp; Name">Type &amp; Name</label>
-            <span class="bokingLabel">{{vType}} - {{vName}}</span>
+            <span class="bokingLabel">{{vehicleDetails.vType}} - {{vehicleDetails.vName}}</span>
         </div>
         <div class="fieldContainer left marginRightLeft5 bookingInput">
             <label class="labelCompact" title="Vehicle Start Kms.">Start Kms.</label>
