--- a/sigmaCabs/app/views/dispatches/lastMonthHistory.html
+++ b/sigmaCabs/app/views/dispatches/lastMonthHistory.html
@@ -73,24 +73,19 @@
                     <label class="labelCompact" title="Total Bookings">T.Bkngs</label>
                     <span>150</span>
                 </div>
-                <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Successful Bookings">SB</label>
-                    <span>145</span>
+                <div class="fieldContainer relative">
+                    <span title="Successful Bookings">SB: </span>
+                    <span class="margin-right10">145</span>
+
+                    <span title="Rejected Bookings">RB: </span>
+                    <span class="margin-right10">2</span>
+
+                    <span title="Roadside Bookings">Ro.B: </span>
+                    <span class="margin-right10">2</span>
+
+                    <span title="Cancelled Bookings">CB: </span>
+                    <span class="margin-right10">1</span>
                 </div>
-                <div class="fieldContainer relative right" style="width:180px">
-                    <label class="labelCompact" title="Rejected Bookings">R.B</label>
-                    <span>2</span>
-                </div>
-                <p class="clear"/>
-                <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Roadside Bookings">Ro.B</label>
-                    <span>2</span>
-                </div>
-                <div class="fieldContainer relative right" style="width:180px">
-                    <label class="labelCompact" title="Cancelled Bookings">Ca.B</label>
-                    <span>1</span>
-                </div>
-                <p class="clear"/>
             </div>
         </div>
         <div class="left" style="height: 100%;width:30%; text-align: center;">
