--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -29,7 +29,7 @@
     </div>
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Home Loc.</label>
-        <span>{{vehicleMainDetails.details.homeLocation}}</span>
+        <span class="ellipsisText" title="{{vehicleMainDetails.details.homeLocation}}">{{vehicleMainDetails.details.homeLocation}}</span>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact">Next Booking</label>
@@ -38,7 +38,7 @@
     <p class="clear" />
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Current Loc</label>
-        <span>{{vehicleMainDetails.location}}</span>
+        <span class="ellipsisText" title="{{vehicleMainDetails.location}}">{{vehicleMainDetails.location}}</span>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact">Booking Id</label>
