--- a/sigmaCabs/app/views/dispatches/currentMonthData.html
+++ b/sigmaCabs/app/views/dispatches/currentMonthData.html
@@ -1,32 +1,25 @@
 <fieldset class="currentMonthData">
     <legend class="searchbox-border">Current Day Bookings</legend>
-    <div style="margin-bottom:5px;">
-        <span title="Login Time"><strong>LT:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.loginTime}}</strong></span>
+    <div class="header-display">
+        <!-- <span class="" title="{{vehicleMainDetails.details.homeLocation}}">{{vehicleMainDetails.details.homeLocation}}</span> -->
+        <span title="Login Time"><strong>LT:</strong></span>
+        <span class="ellipsisText" title="{{currentDayStatistics.loginTime}}"><strong>{{currentDayStatistics.loginTime}}</strong></span>
 
-        <span title="Previous Location"><strong>PL:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.prevousLocation}}</strong></span>
+        <span title="Expected Logout Time"><strong>ELoT:</strong></span>
+        <span class="ellipsisText" title="{{currentDayStatistics.loginTime}}"><strong>{{currentDayStatistics.loginTime}}</strong></span>
 
-        <span title="Current Location"><strong>CL:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.currentLocation}}</strong></span>
+        <span title="Previous Location"><strong>PL:</strong></span>
+        <span class="ellipsisText" title="{{currentDayStatistics.prevousLocation}}"><strong>{{currentDayStatistics.prevousLocation}}</strong></span>
+
+        <span title="Current Location"><strong>CL:</strong></span>
+        <span class="ellipsisText" title="{{currentDayStatistics.currentLocation}}"><strong>{{currentDayStatistics.currentLocation}}</strong></span>
         
-        <span><strong>Status:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.status}}</strong></span>
-
-        <span title="Total Booking"><strong>TB:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.totalBookings}}</strong></span>
-
-        <span title="Successful Booking"><strong>SB:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.completedBookings}}</strong></span>
-
-        <span title="Rejected Booking"><strong>RB:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.rejectedBookings}}</strong></span>
-
-        <span title="Cancelled Booking"><strong>CB:&nbsp;</strong></span>
-        <span class="margin-right10"><strong>{{currentDayStatistics.canceledBookings}}</strong></span>
+        <span><strong>Status:</strong></span>
+        <span class="ellipsisText"><strong>{{currentDayStatistics.status}}</strong></span>
+        <p class="clear"/>
     </div>
-    <div style="height:225px;margin-right: 20px;width:72%;" id="customerBookingGridID" class="bookingHistoryGrid left">
-    	<div class="gridStyle" ng-grid="gridCurrentMonthData" style="min-height:220px;"></div>
+    <div style="height:200px;margin-right: 20px;width:72%;" id="customerBookingGridID" class="bookingHistoryGrid left">
+    	<div class="gridStyle" ng-grid="gridCurrentMonthData" style="min-height:195px;"></div>
     </div>
     <div style="width:24%;margin-top: 20px;" class="left">
     	<div class="fieldContainer relative clearBoth">
@@ -48,6 +41,20 @@
         <div class="fieldContainer relative clearBoth">
             <label class="labelCompact" title="Performance">Perf..</label>
             <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:{{currentDayStatistics.performance}};"></span>
+        </div>
+        <div class="fieldContainer relative clearBoth">
+            <span title="Total Booking"><strong>TB:&nbsp;</strong></span>
+            <span class="margin-right10"><strong>{{currentDayStatistics.totalBookings}}</strong></span>
+
+            <span title="Successful Booking"><strong>SB:&nbsp;</strong></span>
+            <span class="margin-right10"><strong>{{currentDayStatistics.completedBookings}}</strong></span>
+        </div>
+        <div class="fieldContainer relative clearBoth">
+            <span title="Rejected Booking"><strong>RB:&nbsp;</strong></span>
+            <span class="margin-right10"><strong>{{currentDayStatistics.rejectedBookings}}</strong></span>
+
+            <span title="Cancelled Booking"><strong>CB:&nbsp;</strong></span>
+            <span class="margin-right10"><strong>{{currentDayStatistics.canceledBookings}}</strong></span>
         </div>
     </div>
     <p class="clear" />
@@ -127,24 +134,19 @@
                     <label class="labelCompact" title="Total Bookings">T.Bkngs</label>
                     <span>150</span>
                 </div>
-                <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Successful Bookings">SB</label>
-                    <span>145</span>
+                <div class="fieldContainer relative">
+                    <span title="Successful Bookings">SB: </span>
+                    <span class="margin-right10">145</span>
+
+                    <span title="Rejected Bookings">RB: </span>
+                    <span class="margin-right10">2</span>
+
+                    <span title="Roadside Bookings">Ro.B: </span>
+                    <span class="margin-right10">2</span>
+
+                    <span title="Cancelled Bookings">CB: </span>
+                    <span class="margin-right10">1</span>
                 </div>
-                <div class="fieldContainer relative right" style="width:180px">
-                    <label class="labelCompact" title="Rejected Bookings">R.B</label>
-                    <span>2</span>
-                </div>
-                <p class="clear"/>
-                <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Roadside Bookings">Ro.B</label>
-                    <span>2</span>
-                </div>
-                <div class="fieldContainer relative right" style="width:180px">
-                    <label class="labelCompact" title="Cancelled Bookings">Ca.B</label>
-                    <span>1</span>
-                </div>
-                <p class="clear"/>
             </div>
         </div>
         <div class="left" style="height: 100%;width:30%; text-align: center;">
