--- a/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
@@ -7,11 +7,11 @@
         <div class="popupCallerInfo">
             <div class="left innerLabelContainer">
                 <span  class="innerLabel">Caller Name: </span>
-                <span>New Caller</span>
+                <span>-</span>
             </div>
             <div class="right innerLabelContainer">
                 <span class="innerLabel">Caller Ph.: </span>
-                <span>888888</span>
+                <span>-</span>
             </div>
         </div>
         <div class="modal-body" > 
