Bug fixes on callTaker view and additional data fields added per Lala for save Bookings

--- a/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
+++ b/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
@@ -130,7 +130,7 @@
                     </div>
                     <hr class="buttonSpliter">
                     <div class="clearBoth relative mainButtonContainer">
-                      <button type="button" class="right btn-success btnCompact" ng-click="fnReserve()" title="Reserve selected vehicle and close this popup">Reserve & Close</button>
+                      <button type="button" class="right btn-success btnCompact" ng-click="fnReserveAndClose()" title="Reserve selected vehicle and close this popup">Reserve & Close</button>
                     </div>
                 </fieldset>
 
