--- a/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
+++ b/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
@@ -11,9 +11,9 @@
                 Select Hours<span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="javascript:void(0);" data-ng-click="">1 Hour</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="">2 Hours</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="">3 Hours</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnRefreshStatistics(1)">1 Hour</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnRefreshStatistics(2)">2 Hours</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnRefreshStatistics(3)">3 Hours</a></li>
                 </ul>
             </div>
 	    </div>
